syntax = "proto3";

package news;

option go_package = "github.com/Abdurahmanit/GroupProject/news-service/proto;newspb";

import "news.proto";
import "comment.proto";
import "like.proto";

service NewsService {
  rpc CreateNews(CreateNewsRequest) returns (CreateNewsResponse);
  rpc GetNews(GetNewsRequest) returns (GetNewsResponse);
  rpc ListNews(ListNewsRequest) returns (ListNewsResponse);
  rpc UpdateNews(UpdateNewsRequest) returns (UpdateNewsResponse);
  rpc DeleteNews(DeleteNewsRequest) returns (DeleteNewsResponse);

  rpc CreateComment(CreateCommentRequest) returns (CreateCommentResponse);
  rpc GetCommentsForNews(GetCommentsForNewsRequest) returns (GetCommentsForNewsResponse);
  rpc DeleteComment(DeleteCommentRequest) returns (DeleteCommentResponse);

  rpc LikeNews(LikeNewsRequest) returns (LikeNewsResponse);
  rpc UnlikeNews(UnlikeNewsRequest) returns (UnlikeNewsResponse);
  rpc GetLikesCount(GetLikesCountRequest) returns (GetLikesCountResponse);

  rpc GetNewsByAuthor(GetNewsByAuthorRequest) returns (ListNewsResponse);
}

message GetNewsByAuthorRequest {
  string author_id = 1;
  int32 page = 2;
  int32 page_size = 3;
}